--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Mark Asare</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -64,7 +67,7 @@
 
       <div class="text-box">
 
-        <h1>Hi, welcome to my website!</h1>
+        <h1 id="greeting">Hi, welcome to my website!</h1>
         <h1>I'm <span class="auto-text"></span></h1>
         <p>Feel free to reach out to me for your one-stop Data Science solutions.</p>
         <a href="#" class="btn">Contact me</a>
@@ -86,7 +89,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
       var typed = new Typed(".auto-text", {
-        strings: ["Mark Asare", "an ML Engineer", "a Data Scientist", "an NLP Engineer"],
+        strings: ["Mark Asare", "an ML Engineer", "a Data Scientist", "into NLP"],
         typeSpeed: 95,
         backSpeed: 93,
         loop: true
