--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li ><a href="#">Projects<span class="sr-only">(current)</span></a></li>
-            <li><a href="#">About Me</a></li>
+            <li><a href="about.html">About Me</a></li>
             <li><a href="#">Software skills</a></li>
             <li><a href="#">Services</a></li>
             <!-- <li class="dropdown">
@@ -61,7 +61,7 @@
 
     <div class="hero">
       <nav>
-        <a href="#"><img src="logo.png" width="70" height="70" alt=""></a>
+        <a href="#"><img src="logo.png" width="2" height="2" alt=""></a>
 
       </nav>
 
