--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h1>I'm <span class="auto-text"></span></h1>
         <p>Feel free to reach out to me for your one-stop Data Science solutions.</p>
         <a href="#" class="btn">Contact me</a>
-        <a href="MarkAsareCV.pdf" class="btn">View CV</a>
+        <a href="CV - Mark Asare September.pdf" class="btn">View CV</a>
       </div>
     </div>
 
